crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
+---------------+--------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                               |
+---------------+--------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).subject                                                      |
|               |   Sort: vector_search(qs, Utf8("second"), answer).score DESC NULLS FIRST, fetch=4                                  |
|               |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer).score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[score, subject]                             |
| physical_plan | ProjectionExec: expr=[subject@1 as subject]                                                                        |
|               |   SortExec: TopK(fetch=4), expr=[score@0 DESC], preserve_partitioning=[false]                                      |
|               |     HashJoinExec: mode=CollectLeft, join_type=Left, on=[(id@0, id@0)], projection=[score@1, subject@3]             |
|               |       CoalescePartitionsExec                                                                                       |
|               |         AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[score]                                       |
|               |           RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                        |
|               |             AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[score]                                            |
|               |               ProjectionExec: expr=[union_extract(json_get(key@0, id), int) as id, 1 - distance@1 as score]        |
|               |                 CooperativeExec                                                                                    |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                             |
|               |                     BytesProcessedExec                                                                             |
|               |                       CooperativeExec                                                                              |
|               |                         S3VectorsQueryExec: limit=100                                                              |
|               |       SchemaCastScanExec                                                                                           |
|               |         BytesProcessedExec                                                                                         |
|               |           DataSourceExec: partitions=1, partition_sizes=[1]                                                        |
|               |                                                                                                                    |
+---------------+--------------------------------------------------------------------------------------------------------------------+
