crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_vector_search_sql_vectors_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(_score, 2) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                    |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id DESC NULLS FIRST, fetch=4                                                                                                                                                                   |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, array_length(vector_search(qs, Utf8("second"), answer).answer_embedding), trunc(vector_search(qs, Utf8("second"), answer)._score, Int64(2)) AS _score     |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, answer_embedding, id]                                                                                                                                                              |
| physical_plan | SortPreservingMergeExec: [_score@3 DESC, id@0 DESC], fetch=4                                                                                                                                                                                                            |
|               |   SortExec: TopK(fetch=4), expr=[_score@3 DESC, id@0 DESC], preserve_partitioning=[true]                                                                                                                                                                                |
|               |     ProjectionExec: expr=[id@3 as id, answer@1 as answer, array_length(answer_embedding@2) as array_length(vector_search(qs, Utf8("second"), answer).answer_embedding), trunc(_score@0, 2) as _score]                                                                   |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                              |
|               |         ProjectionExec: expr=[_score@2 as _score, answer@3 as answer, answer_embedding@1 as answer_embedding, id@0 as id]                                                                                                                                               |
|               |           HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, answer_embedding@1, _score@2, answer@3]                                                                                               |
|               |             CoalescePartitionsExec                                                                                                                                                                                                                                      |
|               |               AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(answer_embedding) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_embedding, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score] |
|               |                 RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                                       |
|               |                   AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(answer_embedding) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_embedding, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score]      |
|               |                     ProjectionExec: expr=[union_extract(json_get(key@1, id), int) as id, data@0 as answer_embedding, 1 - distance@2 as _score]                                                                                                                          |
|               |                       BytesProcessedExec                                                                                                                                                                                                                                |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                            |
|               |                           S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                  |
|               |             SchemaCastScanExec                                                                                                                                                                                                                                          |
|               |               BytesProcessedExec                                                                                                                                                                                                                                        |
|               |                 DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                                       |
|               |                                                                                                                                                                                                                                                                         |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
