crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_view_basic_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.7961,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\n2"
        ]
      },
      "primary_key": {
        "id": 612
      }
    },
    {
      "_score": 0.785,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " is 2."
        ]
      },
      "primary_key": {
        "id": 349
      }
    },
    {
      "_score": 0.5559,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.5559,
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "\\times 2 \\times 2 \\times 2 = 32\\)"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    }
  ]
}
