crates/runtime/tests/models/snapshots/integration_models__models__search__s3vectors_chunking_view_keywords_response.snap
---
source: crates/runtime/tests/models/search.rs
expression: "normalize_search_response(resp, round_scores)"
---
        "id": 1277
      }
    },
    {
      "_score": "0.53",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          " divisors other than 1 and itself (e.g., 2, 3, 4, 6, 9, 12, 18)"
        "id": 450
      }
    },
    {
      "_score": "0.51",
      "dataset": "qs_view",
      "matches": {
        "answer": [
          "Since there are 50 equal numbers, each number is equal to \\("
